--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<script src="./build/main.js"></script>
-<div id="root"></div>
-<script src="index.js"></script>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="./build/main.js"></script>
+</head>
+
+<body>
+	<div id="root"></div>
+	<script src="index.js"></script>
+</body>
+
+</html>
