--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="./build/main.js"></script>
+	<link rel="stylesheet" href="src/index.css"> 
 </head>
 
 <body>
 	<div id="root"></div>
-	<script src="index.js"></script>
+	<script type="module" src="index.js"></script>
 </body>
 
 </html>
